--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekll-theme-minimal
+theme: jekyll-theme-modernist
 title: Twilio-Vinnguyen Segment Workspace
 description: This is my website for my JavaScript source
